--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -12,4 +12,12 @@
     tools:context="co.edu.unimagdalena.mellanie.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 
+
+    <GridView
+        android:numColumns="auto_fit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gridView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
